# polyPod

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .prettierignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  babel.config.js  build.gradle  build.js  dummyServer.js  env.ts  faucet.config.js  jasmine.json  jest.config.js  karma.conf.js  l10n.toml  package-lock.json  package.json  packages.json  rollup.config.js  settings.gradle  tsconfig.base.json  tsconfig.json  typedoc.json  update-features.sh  zip-feature.sh
platform/core/: .eslintrc  .gitignore  :w  Cargo.toml  Makefile  README  README.md  build.rs  build_for_android.sh  cbindgen.toml  generate_flatbuffers.sh  package.json
platform/core/PolyPodCoreAndroid/: .gitignore  README.md  build.gradle  settings.gradle
platform/core/PolyPodCoreAndroid/Core/: build.gradle
platform/core/PolyPodCoreAndroid/Core/src/main/: AndroidManifest.xml
platform/core/PolyPodCoreAndroid/app/: build.gradle
platform/core/PolyPodCoreAndroid/app/src/main/: AndroidManifest.xml
platform/core/PolyPodCoreAndroid/core/: .gitignore  build.gradle
platform/core/PolyPodCoreAndroid/core/src/main/: AndroidManifest.xml
platform/core/PolyPodCoreAndroid/gradle/wrapper/: gradle-wrapper.properties
platform/core/PolyPodCoreAndroid/src/main/: AndroidManifest.xml
platform/core/PolyPodCoreSwift/: .gitignore  Package.swift  README.md
platform/core/PolyPodCoreSwift/.build/: debug.yaml  workspace-state.json
platform/core/PolyPodCoreSwift/.build/arm64-apple-macosx/: build.db
platform/core/PolyPodCoreSwift/.build/arm64-apple-macosx/debug/: MessagePack.abi.json  MessagePack.swiftdoc  MessagePack.swiftmodule  MessagePack.swiftsourceinfo  description.json
platform/core/PolyPodCoreSwift/.build/repositories/: checkouts-state.json
platform/core/PolyPodCoreSwift/.build/repositories/MessagePack.swift-a040b038/: FETCH_HEAD  config  packed-refs
platform/core/PolyPodCoreSwift/Sources/PolyPodCoreSwift/: Core.swift  CoreFailure.swift  CoreLog.swift  CoreRequest.swift  Deserialize.swift  FBObject.swift  Feature.swift  FeatureCategory.swift  FeatureManifest.swift  FlatbObject.swift  Log.swift  MessagePack+Decoding.swift  MessagePack+Utils.swift  PlatformRequest.swift  Serialize.swift  UpdateNotification.swift  UserSession.swift  Utils.swift
platform/core/PolyPodCoreSwift/Sources/PolyPodCoreSwift/Codable/: MessagePackDecoder.swift  (+1 more)
platform/core/PolyPodCoreSwift/Tests/PolyPodCoreSwiftTests/: DeserializeTests.swift  PolyPodCoreSwiftTests.swift
platform/core/crates/: README  README.md
platform/core/crates/common/: Cargo.toml
platform/core/crates/common/src/: serialization.rs
platform/core/crates/core_failure/: Cargo.toml
platform/core/crates/core_failure/src/: lib.rs
platform/core/crates/failure/: Cargo.toml
platform/core/crates/feature/: Cargo.toml
platform/core/crates/feature/src/: feature.rs  file_system.rs  lib.rs
platform/core/crates/feature_categories/: Cargo.toml
platform/core/crates/feature_categories/src/: lib.rs
platform/core/crates/io/: Cargo.toml
platform/core/crates/io/src/: file_system.rs  lib.rs
platform/core/crates/poly-rdf/: Cargo.toml
platform/core/crates/poly-rdf/src/: rdf.rs  rdf_failure.rs
platform/core/crates/preferences/: Cargo.toml
platform/core/crates/preferences/src/: lib.rs
platform/core/crates/update_notification/: Cargo.toml
platform/core/crates/update_notification/src/: lib.rs  update_notification.rs
platform/core/crates/update_notification/tests/: lib.rs  update_notification.rs
platform/core/crates/user_session/: Cargo.toml
platform/core/ffi/: Cargo.toml  README  README.md
platform/core/ffi/export/ios_headers/: module.modulemap  polypod-core.h
platform/core/ffi/src/: c_interface.rs  java_interface.rs  lib.rs  rdf_result_conversion.rs
platform/core/flatbuffer_models/: feature_manifest.fbs  feature_manifest_response.fbs
platform/core/flatbuffers/: failure.fbs
platform/core/flatbuffers_shared/: generate_flatbuffers.sh  setup_flatbuffers.sh
platform/core/flatbuffers_shared/flatbuffer_models/: core_bootstrap_response.fbs  failure.fbs  feature_manifest.fbs  feature_manifest_response.fbs
platform/core/ios/: Package.swift
platform/core/ios/Tests/PolyPodCoreTests/: iosTests.swift
platform/core/lib/: Cargo.toml  README  README.md
platform/core/lib/src/: bootstrap.rs  core.rs  core_request.rs  lib.rs  platform_request.rs
platform/core/poly-rdf/: .gitignore  Cargo.toml
platform/core/poly-rdf/src/: lib.rs  rdf.rs
platform/core/poly_rdf/: Cargo.toml
platform/core/rdf.db/: 000056.sst  000062.sst  000091.sst  000150.sst  000209.sst  IDENTITY  LOG  LOG.old.1658408254087661  LOG.old.1658478236592319  LOG.old.1658478236786683  LOG.old.1658478325334442  LOG.old.1658478325529521  LOG.old.1658478350097685  LOG.old.1658478350287210  LOG.old.1658478424277564  LOG.old.1658478424464475  LOG.old.1658493859015086  LOG.old.1658493859203198  LOG.old.1658494398849068  LOG.old.1658494399041003  MANIFEST-000409  OPTIONS-000433  OPTIONS-000435
platform/core/src/: core.rs  core_failure.rs  feature_categories.rs  feature_file_system.rs  feature_manifest.rs  feature_manifest_parsing.rs  kernel.rs  lib.rs  poly_out.rs  preferences.rs  rdf.rs  rdf_failure.rs
platform/core/src/android_interface/: interface.rs  mod.rs  utils.rs
platform/core/src/c_interface/: core_bootstrap_fbs_mapping.rs  core_failure_fbs_mapping.rs  feature_manifest_fbs_mapping.rs  interface.rs  kernel_failure_fbs_mapping.rs  mod.rs  utils.rs
platform/core/src/common/: serialization.rs
platform/core/src/ffi/: c_interface.rs  java_interface.rs  mod.rs  rdf_result_conversion.rs
platform/core/src/flatbuffers_generated/: failure_generated.rs  feature_manifest_response_generated.rs  kernel_bootstrap_response_generated.rs  mod.rs
platform/core/src/flatbuffers_mapping/: core_bootstrap_fbs_mapping.rs  feature_manifest_fbs_mapping.rs  mod.rs
platform/core/src/io/: file_system.rs  key_value_store.rs  mod.rs
platform/core/src/user_session/: mod.rs
(+4437 files in other folders)
