[package]
name = "polypod-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# once_cell will be added to std, until then use the crate
once_cell = "1.9.0"
flatbuffers = { path = "flatbuffers_shared/flatbuffers/rust/flatbuffers" }
jni = { version = "0.19.0", default-features = false }
