[package]
name = "polypod-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# once_cell will be added to std, until then use the crate
once_cell = "1.9.0"
rmp-serde = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
sled = "0.34.7"
url="2.2.2"
zip = "0.6.2"
tempfile = "3.3.0"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
pretty_assertions = "1.2.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
android_logger = "0.11"
log = "0.4.17"
oxigraph = "0.3.4"
spargebra = "0.2.1"
sparesults = "0.1.1"
