[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
io = { path = "../crates/io" }
preferences = { path = "../crates/preferences" }
user_session = { path = "../crates/user_session" }
failure = { path = "../crates/failure" }
feature_categories = { path = "../crates/feature_categories" }
