[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
oxigraph = { git = "https://github.com/oxigraph/oxigraph", version = "0.3.6" }
io = { path = "../crates/io" }
preferences = { path = "../crates/preferences" }
user_session = { path = "../crates/user_session" }
core_failure = { path = "../crates/core_failure" }
feature_categories = { path = "../crates/feature_categories" }
poly_rdf = { path = "../crates/poly-rdf" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
log = "0.4.17"
