[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
io = { path = "../crates/io" }
preferences = { path = "../crates/preferences" }
user_session = { path = "../crates/user_session" }
update_notification = { path = "../crates/update_notification" }
core_failure = { path = "../crates/core_failure" }
feature_categories = { path = "../crates/feature_categories" }
common = { path = "../crates/common" }
poly_rdf = { path = "../crates/poly-rdf", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
log = "0.4.17"
