[package]
name = "poly_rdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "poly_rdf"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxigraph = "0.3.4"
spargebra = "0.2.1" 
sparesults = "0.1.1"
