[package]
name = "feature"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.2.2"
io = { path = "../io" }
core_failure = { path = "../core_failure" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tempfile = "3.3.0"
