[package]
name = "feature_categories"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { path = "../failure" }
io = { path = "../io" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
