[package]
name = "preferences"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
io = { path = "../io" }
user_session = { path = "../user_session" }
update_notification = { path = "../update_notification" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
